--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,8 +18,8 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
 
-  releasees-matrix-windows:
-    name: Release Go Binary for Windows
+  releasees-matrix:
+    name: Release Go Binary
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -42,21 +42,6 @@ jobs:
             goos: windows
           - goarch: mips64le
             goos: windows
-    steps:
-      - uses: actions/checkout@v3
-      - uses: wangyoucao577/go-release-action@v1.33
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          goos: ${{ matrix.goos }}
-          goarch: ${{ matrix.goarch }}
-
-  releasees-matrix-linux:
-    name: Release Go Binary for Linux
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        goos: [linux]
-        goarch: ["386", amd64, arm, arm64, ppc64, ppc64le, mips, mipsle, mips64, mips64le]
     steps:
       - uses: actions/checkout@v3
       - uses: wangyoucao577/go-release-action@v1.33
